Fix default cmd gui permission